Errors fixed; Final Solution microp03

--- a/Agenda/src/app/nuevo-evento/nuevo-evento.page.html
+++ b/Agenda/src/app/nuevo-evento/nuevo-evento.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>nuevo-eento</ion-title>
+    <ion-title>nuevo-evento</ion-title>
   </ion-toolbar>
 </ion-header>
 
